# labelstudio-mlbackend-sam2plus

./: .dockerignore  .env  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  _wsgi.py  compose.yml  docker-compose.yml  forking-original-sam2-mlbackend.md  multi-compose.yml  probe.py  pyproject.toml  requirements-test.txt  seg_cropper.py  single-compose.yml
envs/: BASE.env  DEFAULT.env  MULTI.env  SINGLE.env  brick.env  example.env  ichthyolith.env  localhost.env
examples/00-probe_configs/: ichthyo-keypoint-rle.yaml  ichthyo-polygon.yaml  ichthyo-rle.yaml
examples/01-data/: note.txt
examples/02-extra_args/: basic-polygon.json  basic-rle.json
examples/02-extra_params/: basic-polygon.json  basic-rle.json
examples/03-requests/ichthyo-keypoint-rle/: POST-predict.json  POST-setup.json
examples/03-requests/ichthyo-polygon/: POST-predict.json  POST-setup.json
examples/03-requests/ichthyo-rle/: POST-predict.json
examples/05-outputs/ichthyo-keypoint-rle/: prediction.json
examples/05-outputs/ichthyo-polygon/: prediction.json
examples/05-outputs/ichthyo-rle/: prediction.json
scripts/: clean-env-secrets.py
src/app/: _wsgi.py  model.py  postprocess.py  schemas.py  seg_cropper.py
src/probe/: __init__.py  probe.py
tests/: __init__.py  conftest.py  test_schemas.py  test_seg_cropper.py
tests/bigimg/: test_bigimg_api.py
tests/regular/: test_regular_api.py
